# toml_sort

./: Cargo.toml  Readme.md  toml-sort.toml
src/: lib.rs  main.rs
